LH: Fixed issue with spacing

--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -106,7 +106,7 @@ h1.heading {
 .carousel-control-next {
     width: 30px;
     height: 30px;
-    top: 40%;
+    top: 35%;
     transform: translateY(-50%);
     background-color: rgba(0, 0, 0, 0.5);
 }
